--- a/labs/Lab 4 - Pipelines.ipynb
+++ b/labs/Lab 4 - Pipelines.ipynb
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -684,7 +684,7 @@
    ],
    "source": [
     "# Display as a heatmap\n",
-    "sns.heatmap(scores, annot=True, xticklabels=C_range, yticklabels=gamma_range, cmap='viridis')"
+    "sns.heatmap(scores, annot=True, xticklabels=gamma_range, yticklabels=C_range, cmap='viridis')"
    ]
   },
   {
